--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -636,6 +636,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTMAX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASSV2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -684,6 +685,16 @@ CONFIG_SMARTASSV2_UP_RATE_US=48000
 CONFIG_SMARTASSV2_DOWN_RATE_US=99000
 CONFIG_SMARTASSV2_SLEEP_WAKEUP_FREQ=99999999
 CONFIG_SMARTASSV2_SAMPLE_RATE_JIFFIES=2
+CONFIG_CPU_FREQ_GOV_LAGFREE=y
+CONFIG_LAGFREE_MAX_LOAD=50
+CONFIG_LAGFREE_MIN_LOAD=15
+CONFIG_LAGFREE_FREQ_STEP_DOWN=256000
+CONFIG_LAGFREE_FREQ_SLEEP_MAX=300000
+CONFIG_LAGFREE_FREQ_AWAKE_MIN=300000
+CONFIG_LAGFREE_FREQ_STEP_UP_SLEEP_PERCENT=20
+CONFIG_CPU_FREQ_MIN_TICKS=10
+CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
+CONFIG_CPU_FREQ_WAKEUP_BOOST=y
 CONFIG_CPU_FREQ_MSM=y
 
 CONFIG_IOSCHED_NOOP=y
