--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -576,6 +576,7 @@ config CPU_FREQ_GOV_ONDEMAND
 
 	  If in doubt, say N.
 
+
 config CPU_FREQ_GOV_ONDEMANDPLUS
 	tristate "'ondemandplus' cpufreq policy governor"
 	select CPU_FREQ_TABLE
@@ -694,6 +695,15 @@ config CPU_FREQ_GOV_USERSPACE
 config CPU_FREQ_GOV_WHEATLEY
 	tristate "'wheatley' cpufreq governor"
 	depends on CPU_FREQ
+
+config CPUFREQ_HARDLIMIT
+	bool "CPU Frequency max. hardlimit"
+	default y
+	depends on CPU_FREQ
+	help
+	  Enforce a CPU hardlimit on mpdecision by refusing writes to sysfs
+	  above the given cutoff frequency and returning this cutoff frequency
+	  as get_max_freq(). (Yank555.lu)
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
