--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2436,6 +2436,14 @@ config MSM_SLEEPER
 	help
 	  Limit max frequency while screen is off
 
+config TURBO_BOOST
+	bool "Enable CPU Turbo boost option"
+	default y
+	help
+	  This option allows overclocking of 2 cores to higher clock rate
+	  than stock maximum.  When more than 2 cores are active, the clock
+	  is limited to stock max speeds
+
 config MSM_AVS_HW
 	bool "Enable Adaptive Voltage Scaling (AVS)"
 	default n
