--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -597,8 +597,10 @@ CONFIG_DEBUG_LIST=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_CMA_AREAS=15
 
+CONFIG_LOCALVERSION="-ZION-cm11-hlte-Unified-M-v0.5"
 
-CONFIG_LOCALVERSION="-ZION-cm11-hlte-Unified-M-v0.1"
+CONFIG_INTELLI_PLUG=y
+CONFIG_MSM_HOTPLUG=y
 
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
@@ -692,7 +694,7 @@ CONFIG_KERNEL_MODE_NEON=y
 CONFIG_NTFS_FS=y
 CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
-CONFIG_MSM_CPUFREQ_LIMITER=y
+# CONFIG_MSM_CPUFREQ_LIMITER is not set
 CONFIG_QUAD_CORES_SOC_STAT=y
 CONFIG_POWERSUSPEND=y
 CONFIG_MSM_SLEEPER=y
@@ -701,6 +703,7 @@ CONFIG_MSM_CPUFREQ_LIMITER=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
 CONFIG_MSM_KGSL_SIMPLE_GOV=y
 CONFIG_MDNIE_LITE_CONTROL=y
+CONFIG_MDNIE_LITE_TUNING=y
 CONFIG_CPUFREQ_HARDLIMIT=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HAS_MACH_MEMUTILS=y
@@ -710,3 +713,39 @@ CONFIG_TURBO_BOOST=y
 CONFIG_KRAIT_REGULATOR=y
 CONFIG_CPU_OVERCLOCK=y
 CONFIG_TOUCH_WAKE=y
+
+CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
+CONFIG_HAS_EARLYSUSPEND=y
+CONFIG_LCD_NOTIFY=y
+CONFIG_UACCESS_WITH_MEMCPY=y
+
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_CMA_AREAS=15
+CONFIG_MUTEX_SPIN_ON_OWNER=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=2496000
+CONFIG_MSM_CPU_FREQ_MIN=300000
+CONFIG_HOTPLUG_CPU=y
+CONFIG_MSM_IOMMU_VBIF_CHECK=y
+CONFIG_LSM_MMAP_MIN_ADDR=32768
