--- a/arch/arm/configs/msm8974_sec_defconfig
+++ b/arch/arm/configs/msm8974_sec_defconfig
@@ -522,6 +522,7 @@ CONFIG_FUSE_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_SDCARD_FS=y
 CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_RW=y
 CONFIG_TMPFS=y
 CONFIG_NLS_CODEPAGE_437=y
 CONFIG_NLS_ASCII=y
@@ -749,3 +750,11 @@ CONFIG_MSM_CPU_FREQ_MIN=300000
 CONFIG_HOTPLUG_CPU=y
 CONFIG_MSM_IOMMU_VBIF_CHECK=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
+
+CONFIG_MISC_FILESYSTEMS=y
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_RW=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
