--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -925,6 +925,15 @@ config CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER
 	help
 	  Sampling latency rate multiplied by the cpu switch latency. 
 
+config CPUFREQ_HARDLIMIT
+	bool "CPU Frequency max. hardlimit"
+	default y
+	depends on CPU_FREQ
+	help
+	  Enforce a CPU hardlimit on mpdecision by refusing writes to sysfs
+	  above the given cutoff frequency and returning this cutoff frequency
+	  as get_max_freq(). (Yank555.lu)
+
 menu "x86 CPU frequency scaling drivers"
 depends on X86
 source "drivers/cpufreq/Kconfig.x86"
